ingress/01_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fyc-esgi-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:

  rules:
    - host: "fyc-esgi.fr"
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: /backend/?(.*)
            backend:
              service:
                name: backend
                port:
                  number: 8080
